
2024-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler): moved call of cob_exit_screen_from_signal
	  from ss_terminate_routines here instead of calling cob_exit_screen
	* common.c (cob_sig_handler, cob_stack_trace_internal,
	  cob_runtime_warning_ss): now using an internal buffer to output data
	  instead of potentially hundreds of small direct writes, output the
	  complete buffer when half-full oir at the end
	* common.c (get_source_location): renamed from output_source_location,
	  now writing to a specified buffer, returning the length, instead of
	  direct write to stderr
	* common.c (output_procedure_stack_entry): use buffer instead of direct
	  write to stderr, now returning the length
	* common.c (write_until_fail, strcat_to_buf, intcat_to_buff): new helper
	  functions
	* common.c (cob_sig_handler): moved call of cob_exit_screen_from_signal
	  from ss_terminate_routines here instead of calling cob_exit_screen
	* common.c (cob_runtime_warning_ss), coblocal.h,
	  fileio.c (cob_exit_fileio_msg_only): changed signature, now returning
	  nonzero if write to stderr wasn't sucessfull
	* common.c (cob_runtime_warning, cob_runtime_warning_external):
	  use all buffered io again
	* common.c (cob_load_config_file): fix format truncation warning by
      explicit checking for it

2024-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_version): PACKAGE_NAME may now be overwritten
	  by PKGVERSION (new configure option)
	* common.c (cob_sig_handler): fixed early exit from signal handler
	  in case of errors during write to stderr, adjusted macros accordingly
	* common.c (cob_sig_handler): flush stdout+stderr for fixed set of signals
	  where this is known to work
	* common.c (cob_reg_sighnd): if signal handler is enabled from outside the
	  COBOL runtime (like via cobc), do the initialization of the internal signal
	  text table (was empty before)
	* common.c (cob_sig_handler): early exit for SIGPIPE without output if